# LubricationSolver

./: README.md  pyproject.toml
datas/: squeeze_damper.yaml
outputs/: temp
src/lubrication_solver/: cli.py  main.py
src/lubrication_solver/engine/: __init__.py  cylindrical_shape.py  floating_core.py  flow.py  journal_bearing.py  no_core.py  solver.py  squeeze_damper.py
src/lubrication_solver/newton_solver/: solver.py
